# middleware-sdk

./: .gitignore  Cargo.toml  README.md  toolchain.toml
shared_lib/: Cargo.toml
shared_lib/src/: arithmetic.rs  crypto.rs  lib.rs
shared_lib_web/: Cargo.toml
shared_lib_web/src/: lib.rs
uniffi-bindgen/: Cargo.toml
