[package]
name = "sharedlib"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.28.3", features=["scaffolding-ffi-buffer-fns"] }
thiserror = "2.0.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pkcs8"] }
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5" }
hex = "0.4.3"

[build-dependencies]
uniffi = { workspace = true, features = [ "build" ] }
